// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return create an job 1`] = `
Array [
  Object {
    "apiVersion": "batch/v1",
    "kind": "Job",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "create-db-job-abcdefg",
      "namespace": "sample-42-my-test",
    },
    "spec": Object {
      "backoffLimit": 5,
      "template": Object {
        "metadata": Object {
          "annotations": Object {
            "app.gitlab.com/app": "socialgouv-sample",
            "app.gitlab.com/env": "my-test",
          },
          "labels": Object {
            "application": "sample",
            "owner": "sample",
            "team": "sample",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "command": Array [
                "create-db-user",
              ],
              "env": Array [
                Object {
                  "name": "NEW_DB_NAME",
                  "value": "autodevops_abcdefg",
                },
                Object {
                  "name": "NEW_USER",
                  "value": "user_abcdefg",
                },
                Object {
                  "name": "NEW_PASSWORD",
                  "value": "password_abcdefg",
                },
                Object {
                  "name": "NEW_DB_EXTENSIONS",
                  "value": "hstore pgcrypto citext uuid-ossp",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "azure-pg-admin-user",
                  },
                },
              ],
              "image": "ghcr.io/socialgouv/docker/azure-db:6.26.2",
              "imagePullPolicy": "IfNotPresent",
              "name": "create-db-user",
              "resources": Object {
                "limits": Object {
                  "cpu": "300m",
                  "memory": "256Mi",
                },
                "requests": Object {
                  "cpu": "100m",
                  "memory": "64Mi",
                },
              },
            },
          ],
          "restartPolicy": "Never",
        },
      },
      "ttlSecondsAfterFinished": 86400,
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Secret",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "azure-pg-user-abcdefg",
      "namespace": "sample-42-my-test",
    },
    "stringData": Object {
      "DATABASE_URL": "postgresql://user_abcdefg%40sampledevserver.postgres.database.azure.com:password_abcdefg@sampledevserver.postgres.database.azure.com/autodevops_abcdefg?sslmode=require",
      "DB_URI": "postgresql://user_abcdefg%40sampledevserver.postgres.database.azure.com:password_abcdefg@sampledevserver.postgres.database.azure.com/autodevops_abcdefg?sslmode=require",
      "HASURA_GRAPHQL_DATABASE_URL": "postgresql://user_abcdefg%40sampledevserver.postgres.database.azure.com:password_abcdefg@sampledevserver.postgres.database.azure.com/autodevops_abcdefg?sslmode=require",
      "PGDATABASE": "autodevops_abcdefg",
      "PGHOST": "sampledevserver.postgres.database.azure.com",
      "PGPASSWORD": "password_abcdefg",
      "PGRST_DB_URI": "postgresql://user_abcdefg%40sampledevserver.postgres.database.azure.com:password_abcdefg@sampledevserver.postgres.database.azure.com/autodevops_abcdefg?sslmode=require",
      "PGSSLMODE": "require",
      "PGUSER": "user_abcdefg@sampledevserver.postgres.database.azure.com",
    },
  },
]
`;

exports[`should throw because of a missing envs 1`] = `
"Wrong environment variables
required \\"CI_ENVIRONMENT_NAME\\": \\"undefined\\" should be defined
required \\"CI_ENVIRONMENT_SLUG\\": \\"undefined\\" should be defined
required \\"CI_PROJECT_NAME\\": \\"undefined\\" should be defined
required \\"CI_PROJECT_PATH_SLUG\\": \\"undefined\\" should be defined
required \\"KUBE_INGRESS_BASE_DOMAIN\\": \\"undefined\\" should be defined
required \\"KUBE_NAMESPACE\\": \\"undefined\\" should be defined
required \\"CI_COMMIT_SHORT_SHA\\": \\"undefined\\" should be defined
"
`;

exports[`should use custom pgHost 1`] = `
Array [
  Object {
    "apiVersion": "batch/v1",
    "kind": "Job",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "create-db-job-abcdefg",
      "namespace": "sample-42-my-test",
    },
    "spec": Object {
      "backoffLimit": 5,
      "template": Object {
        "metadata": Object {
          "annotations": Object {
            "app.gitlab.com/app": "socialgouv-sample",
            "app.gitlab.com/env": "my-test",
          },
          "labels": Object {
            "application": "sample",
            "owner": "sample",
            "team": "sample",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "command": Array [
                "create-db-user",
              ],
              "env": Array [
                Object {
                  "name": "NEW_DB_NAME",
                  "value": "autodevops_abcdefg",
                },
                Object {
                  "name": "NEW_USER",
                  "value": "user_abcdefg",
                },
                Object {
                  "name": "NEW_PASSWORD",
                  "value": "password_abcdefg",
                },
                Object {
                  "name": "NEW_DB_EXTENSIONS",
                  "value": "hstore pgcrypto citext uuid-ossp",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "azure-pg-admin-user",
                  },
                },
              ],
              "image": "ghcr.io/socialgouv/docker/azure-db:6.26.2",
              "imagePullPolicy": "IfNotPresent",
              "name": "create-db-user",
              "resources": Object {
                "limits": Object {
                  "cpu": "300m",
                  "memory": "256Mi",
                },
                "requests": Object {
                  "cpu": "100m",
                  "memory": "64Mi",
                },
              },
            },
          ],
          "restartPolicy": "Never",
        },
      },
      "ttlSecondsAfterFinished": 86400,
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Secret",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "azure-pg-user-abcdefg",
      "namespace": "sample-42-my-test",
    },
    "stringData": Object {
      "DATABASE_URL": "postgresql://user_abcdefg%40pouetpouet.com:password_abcdefg@pouetpouet.com/autodevops_abcdefg?sslmode=require",
      "DB_URI": "postgresql://user_abcdefg%40pouetpouet.com:password_abcdefg@pouetpouet.com/autodevops_abcdefg?sslmode=require",
      "HASURA_GRAPHQL_DATABASE_URL": "postgresql://user_abcdefg%40pouetpouet.com:password_abcdefg@pouetpouet.com/autodevops_abcdefg?sslmode=require",
      "PGDATABASE": "autodevops_abcdefg",
      "PGHOST": "pouetpouet.com",
      "PGPASSWORD": "password_abcdefg",
      "PGRST_DB_URI": "postgresql://user_abcdefg%40pouetpouet.com:password_abcdefg@pouetpouet.com/autodevops_abcdefg?sslmode=require",
      "PGSSLMODE": "require",
      "PGUSER": "user_abcdefg@pouetpouet.com",
    },
  },
]
`;
